Update SQL parser to handle foreign keys
The SQLFileParser has been updated to handle foreign keys. In addition to primary keys, it will now also parse foreign key constraints from SQL file scripts. This provides a more comprehensive parsing capability, which can be helpful for database-relevant operations.